Change language command back to string argument
because this is better, easier to add more languages